# king_albert_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: AnsiColor.h  Board.h  Card.h  CardColor.h  ColumnPosition.h  Deck.h  FoundationPosition.h  Game.h  GameState.h  HandPosition.h  Move.h  Position.h  Rank.h  Suit.h
src/: AnsiColor.cpp  Board.cpp  Card.cpp  CardColor.cpp  ColumnPosition.cpp  Deck.cpp  FoundationPosition.cpp  Game.cpp  HandPosition.cpp  Rank.cpp  Suit.cpp  main.cpp
